--- a/Capsule_Network_Project_2.ipynb
+++ b/Capsule_Network_Project_2.ipynb
@@ -355,8 +355,8 @@
         "                    # Update accuracy\n",
         "                    sum_accuracy[split] += batch_accuracy\n",
         "                    #Update Confusion Matrix\n",
-        "                    for label, pred in zip(labels.view(-1), pred_labels.view(-1)):\n",
-        "                      confusion_matrix[split][label, pred] += 1\n",
+        "                    for label, pred_label in zip(labels.view(-1), pred_labels.view(-1)):\n",
+        "                      confusion_matrix[split][label, pred_label] += 1\n",
         "            # Compute epoch loss/accuracy\n",
         "            epoch_loss = {split: sum_loss[split]/len(loaders[split]) for split in [\"train\", \"val\", \"test\"]}\n",
         "            epoch_accuracy = {split: sum_accuracy[split]/len(loaders[split]) for split in [\"train\", \"val\", \"test\"]}\n",
@@ -402,7 +402,7 @@
         "        plt.show()\n",
         "        return(best_val_accuracy, test_accuracy_at_best_val, best_val_per_class_accuracy, test_per_class_accuracy_at_best_val)"
       ],
-      "execution_count": 32,
+      "execution_count": 46,
       "outputs": []
     },
     {
