Quite final commit

--- a/Capsule_Network_Project_2.ipynb
+++ b/Capsule_Network_Project_2.ipynb
@@ -156,7 +156,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "w81OQ4-tym1J",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 229
+        },
+        "outputId": "3518d1eb-0216-443a-9edb-3a19ec80c602"
       },
       "source": [
         "class RoutingCapsules(nn.Module):\n",
@@ -172,50 +176,43 @@
         "  \n",
         "  def forward(self, x):\n",
         "    batch_size = x.size(0)\n",
-        "    # (batch_size, num_in_caps, in_vector_length) -> (batch_size, 1, num_in_caps, in_vector_length, 1)\n",
         "    x = x.unsqueeze(1).unsqueeze(4)\n",
-        "    #\n",
-        "    # W @ x =\n",
-        "    # (1, num_output_caps, num_in_caps, out_vector_length, in_vector_length) @ (batch_size, 1, num_in_caps, in_vector_length, 1) =\n",
-        "    # (batch_size, num_out_caps, num_in_caps, out_vector_length, 1)\n",
         "    u_hat = torch.matmul(self.W, x)\n",
-        "    # (batch_size, num_out_caps, num_in_caps, out_vector_length)\n",
         "    u_hat = u_hat.squeeze(-1)\n",
-        "    # detach u_hat during routing iterations to prevent gradients from flowing\n",
+        "    \n",
         "    temp_u_hat = u_hat.detach()\n",
-        "\n",
-        "    '''\n",
-        "    Procedure 1: Routing algorithm\n",
-        "    '''\n",
+        "    \n",
+        "    #Routing algorithm\n",
+        "  \n",
         "    b = torch.zeros(batch_size, self.num_out_caps, self.num_in_caps, 1).to(dev)\n",
         "\n",
         "    for route_iter in range(self.num_routing-1):\n",
-        "      # (batch_size, num_out_caps, num_in_caps, 1) -> Softmax along num_out_caps\n",
         "      c = F.softmax(b, dim=1)\n",
-        "\n",
-        "      # element-wise multiplication\n",
-        "      # (batch_size, num_out_caps, num_in_caps, 1) * (batch_size, num_in_caps, num_out_caps, out_vector_length) ->\n",
-        "      # (batch_size, num_out_caps, num_in_caps, out_vector_length) sum across num_in_caps ->\n",
-        "      # (batch_size, num_out_caps, out_vector_length)\n",
         "      s = (c * temp_u_hat).sum(dim=2)\n",
-        "      # apply \"squashing\" non-linearity along dim_caps\n",
         "      v = squash(s)\n",
-        "      # dot product agreement between the current output vj and the prediction uj|i\n",
-        "      # (batch_size, num_out_caps, num_in_caps, out_vector_length) @ (batch_size, num_out_caps, out_vector_length, 1)\n",
-        "      # -> (batch_size, num_out_caps, num_in_caps, 1)\n",
         "      uv = torch.matmul(temp_u_hat, v.unsqueeze(-1))\n",
         "      b += uv\n",
         "\n",
-        "    # last iteration is done on the original u_hat, without the routing weights update\n",
         "    c = F.softmax(b, dim=1)\n",
         "    s = (c * u_hat).sum(dim=2)\n",
-        "    # apply \"squashing\" non-linearity along dim_caps\n",
         "    v = squash(s)\n",
         "\n",
         "    return v"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-4ca2bb42179e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mRoutingCapsules\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModule\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0min_vector_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_in_caps\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_out_caps\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_vector_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_routing\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0min_vector_length\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0min_vector_length\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnum_in_caps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnum_in_caps\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'nn' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -318,7 +315,7 @@
         "colab": {}
       },
       "source": [
-        "def train_model(epochs, dev, num_classes, loaders, lr=0.001, reconstruction_loss_scale=5e-1):\n",
+        "def train_model(epochs, dev, num_classes, loaders, lr=0.001, reconstruction_loss_scale=0.5):\n",
         "    try:\n",
         "        # Create model\n",
         "        model = CapsNet(num_classes=num_classes)\n",
@@ -564,7 +561,7 @@
         "colab": {}
       },
       "source": [
-        "def train(train_dataset, test_dataset, train_transform, test_transform, val_frac, num_classes, epochs):\n",
+        "def train(train_dataset, test_dataset, train_transform, test_transform, val_frac, num_classes, epochs, lr, reconstruction_loss_scale):\n",
         "  num_train = len(train_dataset)\n",
         "  idx = list(range(num_train))\n",
         "  idx_iter = iter(idx)\n",
@@ -589,7 +586,7 @@
         "    \"test\": test_loader\n",
         "  }\n",
         "\n",
-        "  return train_model(epochs, dev, num_classes, loaders, lr=0.001, reconstruction_loss_scale=5e-1)\n"
+        "  return train_model(epochs, dev, num_classes, loaders, lr, reconstruction_loss_scale)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -606,11 +603,9 @@
         "outputId": "11b24628-9534-4ba4-f93a-5ae9e27b8653"
       },
       "source": [
-        "#Without train transformations\n",
-        "\n",
         "train_transform = T.Compose([\n",
         "    T.Resize(320),\n",
-        "    T.RandomCrop(256),\n",
+        "    T.RandomCrop(256)\n",
         "    T.ToTensor()\n",
         "])\n",
         "\n",
@@ -620,7 +615,7 @@
         "sum_best_val_per_class_accuracy = torch.zeros(num_classes).to(dev)\n",
         "sum_test_per_class_accuracy_at_best_val = torch.zeros(num_classes).to(dev)\n",
         "for _ in range(k):\n",
-        "  best_val_accuracy, test_accuracy_at_best_val, best_val_per_class_accuracy, test_per_class_accuracy_at_best_val = train(train_dataset, test_dataset, train_transform, test_transform, val_frac, num_classes,50)\n",
+        "  best_val_accuracy, test_accuracy_at_best_val, best_val_per_class_accuracy, test_per_class_accuracy_at_best_val = train(train_dataset, test_dataset, train_transform, test_transform, val_frac, num_classes, 50, 0.001, 0.5)\n",
         "  sum_best_val_accuracy += best_val_accuracy\n",
         "  sum_test_accuracy_at_best_val += test_accuracy_at_best_val\n",
         "  sum_best_val_per_class_accuracy += best_val_per_class_accuracy\n",
